Added borders square

--- a/index.html
+++ b/index.html
@@ -149,8 +149,15 @@
                           <img src="images/pablo-honey.jpg" alt="Radiohead">
                       </a>
                   </div>
-                  <div class="square">
-                      next square
+                  <div class="square border-first">
+                      <div class="border-second">
+                          <div class="border-third">
+                              <div class="border-fourth">
+                                  <div class="border-fifth">
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
                   </div>
                   <div class="square">
                       next square
