Added Star wars square

--- a/index.html
+++ b/index.html
@@ -159,8 +159,10 @@
                           </div>
                       </div>
                   </div>
-                  <div class="square">
-                      next square
+                  <div class="square star-wars" href="http://starwars.wikia.com/wiki/Opening_crawl">
+                      <p>Lucas has openly admitted that the opening crawl is inspired by the same opening crawl
+                          that can be seen at the beginning of each episode of the original Flash Gordon film serial
+                          that inspired Lucas to write much of the Star Wars saga.</p>
                   </div>
                   <div class="square">
                       next square
