Moved CSS to seperate files

--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
         <meta charset="utf-8">
         <title>CSS Squares</title>
         <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Bungee+Shade" rel="stylesheet">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="css/styles.css">
         <link rel="stylesheet" href="squares.css">
+        <link rel="stylesheet" href="css/color-swap.css">
+        <link rel="stylesheet" href="css/rainbow-text.css">
+        <link rel="stylesheet" href="css/rotate.css">
+        <link rel="stylesheet" href="css/first-line.css">
+        <link rel="stylesheet" href="css/nth-child.css">
+        <link rel="stylesheet" href="css/button-grow.css">
+        <link rel="stylesheet" href="css/pop-circles.css">
+        <link rel="stylesheet" href="css/zoom-text.css">
+        <link rel="stylesheet" href="css/drag-image.css">
+        <link rel="stylesheet" href="css/clock.css">
+        <link rel="stylesheet" href="css/radiohead.css">
+        <link rel="stylesheet" href="css/borders.css">
+        <link rel="stylesheet" href="css/starwars.css">
     </head>
     <body>
         <div class="header">
@@ -163,18 +176,6 @@
                       <p>Lucas has openly admitted that the opening crawl is inspired by the same opening crawl
                           that can be seen at the beginning of each episode of the original Flash Gordon film serial
                           that inspired Lucas to write much of the Star Wars saga.</p>
-                  </div>
-                  <div class="square">
-                      next square
-                  </div>
-                  <div class="square">
-                      next square
-                  </div>
-                  <div class="square">
-                      next square
-                  </div>
-                  <div class="square">
-                      next square
                   </div>
                   <div class="square">
                       next square
