--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <link rel="stylesheet" href="css/radiohead.css">
         <link rel="stylesheet" href="css/borders.css">
         <link rel="stylesheet" href="css/starwars.css">
+        <link rel="stylesheet" href="css/parallax.css">
     </head>
     <body>
         <div class="header">
@@ -177,8 +178,12 @@
                           that can be seen at the beginning of each episode of the original Flash Gordon film serial
                           that inspired Lucas to write much of the Star Wars saga.</p>
                   </div>
-                  <div class="square">
-                      next square
+                  <div class="square parallax">
+                    <div class="para-body">
+                      <div class="para-header">
+                        <h1 class="para-text">Parallax</h1>
+                      </div>
+                    </div>
                   </div>
                   <div class="square">
                       next square
