Renamed grid class to squares class

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <title>CSS Squares</title>
         <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Bungee+Shade" rel="stylesheet">
         <link rel="stylesheet" href="css/styles.css">
-        <link rel="stylesheet" href="squares.css">
         <link rel="stylesheet" href="css/color-swap.css">
         <link rel="stylesheet" href="css/rainbow-text.css">
         <link rel="stylesheet" href="css/rotate.css">
@@ -20,6 +19,7 @@
         <link rel="stylesheet" href="css/borders.css">
         <link rel="stylesheet" href="css/starwars.css">
         <link rel="stylesheet" href="css/parallax.css">
+        <link rel="stylesheet" href="css/grid.css">
     </head>
     <body>
         <div class="header">
@@ -29,7 +29,7 @@
                <br>Check out the code on <a href="http://www.github.com/janemaguire/css-squares" target="_blank">Github</a></p>
         </div>
         <div class="container">
-            <div class="grid">
+            <div class="squares">
                   <div class="square color-fade">
                       <h2>Colour Swap</h2>
                   </div>
@@ -185,8 +185,8 @@
                       </div>
                     </div>
                   </div>
-                  <div class="square">
-                      next square
+                  <div class="square grid">
+                      GRID
                   </div>
                   <div class="square">
                       next square
